--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,8 @@ sitemap: false
 @import "toc"; /* table of contents */
 @import "breadcrumbs";
 @import "syntax";
+@import "portfolio";
+@import "bio";
 
 /*
    Page specific
