a bunch of changes

--- a/_includes/portfolio-grid.html
+++ b/_includes/portfolio-grid.html
@@ -4,12 +4,12 @@
       {% if link.url %}</a>{% endif %}
       <div class="portfolio-item__title-wrapper">
         {% if link.url %}<a href="{{ site.url }}{{ link.url }}" class="portfolio-item__link">{% endif %}
-          <div class="portfolio-item__title">{{ link.title }}</div>
+          <h4 class="portfolio-item__title">{{ link.title }}</h4>
 		{% if link.url %}</a>{% endif %}
 		{% if link.subtitle %}<div class="portfolio-item__subtitle">{{ link.subtitle }}</div>{% endif %}
 		{% if link.date %}<div class="portfolio-item__date">{{ link.date }}</div>{% endif %}
       </div>
-      
+
       {% if link.excerpt %}<p class="portfolio-item__excerpt">{{ link.excerpt }}</p>{% endif %}
-      
+
     </div>{% endfor %}
