--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -33,7 +33,8 @@
 }
 
 .portfolio-item__title {
-  font-weight: bold;
+  @include font-size(20);
+  margin: 0px 0px 5px 0px;
 }
 
 .portfolio-item__subtitle {
