--- a/_sass/_tiles.scss
+++ b/_sass/_tiles.scss
@@ -19,6 +19,10 @@
   .post-title {
     @include font-size(18,no);
   }
+  .post-subtitle {
+    @include font-size(14,no);
+    margin: 0px;
+  }
   .post-excerpt {
     @include font-size(16);
   }
@@ -40,6 +44,9 @@
       &:after {
         background: rgba($base-color,0.2);
       }
+    }
+    img {
+      border: $image-border;
     }
   }
 }
