--- a/_sass/_sliding-menu.scss
+++ b/_sass/_sliding-menu.scss
@@ -92,16 +92,16 @@
     @include media($small) {
       @include font-size(16);
     }
-    span {
-      display: block;
-      @include font-size(32,no,1);
-      @include media($small) {
-        @include font-size(48,no,1);
-      }
-      font-family: $base-font;
-      text-transform: uppercase;
-      font-weight: 400;
-    }
+    //span {
+    //  display: block;
+    //  @include font-size(32,no,1);
+    //  @include media($small) {
+    //    @include font-size(48,no,1);
+    //  }
+    //  font-family: $base-font;
+    //  text-transform: uppercase;
+    //  font-weight: 400;
+    //}
   }
   ul {
     margin: 0 10%;
