--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -3,8 +3,10 @@
     <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="{{ site.url }}" itemprop="url">
         <span itemprop="title">Home</span>
-      </a> › 
-    <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+      </a> ›
+      <a href="{{ site.url }}/lab" itemprop="url">
+        <span itemprop="title">Lab</span>
+      </a> ›
       <a href="{{ site.url }}/{{ page.categories | first }}/" itemprop="url">
         <span itemprop="title">{{ page.categories | first | replace: '-',' ' | capitalize }}</span>
       </a>
